# Lab4G

./: .gitignore  CMakeLists.txt  README.md  color.h  framebuffer.h  main.cpp  objloader.h  triangle.h
